# Bbarolo

./: .gitignore  .readthedocs.yaml  MANIFEST.in  Makefile  Makefile.in  README.md  bbarolo.rb  configure  configure.ac  index.html  params.json  plot.py  pyBBarolo.py  pyproject.toml  requirements.readthedocs.txt  setup.py  sitemap.xml
BBAROLO.rw/: Contents.plist
BBAROLO.rw/DefaultPageAttributes/: Contents.plist
BBAROLO.rw/Pages/: Contents.plist
BBAROLO.rw/Pages/1-Home/: Contents.plist  Data.archive
BBAROLO.rw/Pages/1-Home/PageAttributes/: Contents.plist
BBAROLO.rw/Pages/2-Downloads/: Contents.plist  Data.archive
BBAROLO.rw/Pages/2-Downloads/ChildPages/: Contents.plist
BBAROLO.rw/Pages/2-Downloads/PageAttributes/: Contents.plist
BBAROLO.rw/Pages/3-Documentation/: Contents.plist  Data.archive
BBAROLO.rw/Pages/3-Documentation/PageAttributes/: Contents.plist
BBAROLO.rw/Pages/4-Bugs/: Contents.plist  Data.archive
BBAROLO.rw/Pages/4-pyBBarolo/: Contents.plist
BBAROLO.rw/Pages/4-pyBBarolo/PageAttributes/: Contents.plist
BBAROLO.rw/Pages/5-Bugs/: Contents.plist
BBAROLO.rw/Resources/: Contents.plist
BBAROLO.rw6/: Contents.plist
BBAROLO.rw6/DefaultPageAttributes/: Contents.plist
BBAROLO.rw6/Pages/: Contents.plist
BBAROLO.rw6/Pages/1-Home/: Contents.plist  Data.archive
BBAROLO.rw6/Pages/2-Downloads/: Contents.plist  Data.archive
BBAROLO.rw6/Pages/3-Documentation/: Contents.plist  Data.archive
BBAROLO.rw6/Pages/4-Bugs/: Contents.plist
BBAROLO.rw6/Pages/4-pyBBarolo/: Contents.plist  Data.archive
BBAROLO.rw6/Pages/5-Bugs/: Contents.plist  Data.archive
BBAROLO.rw6/QuickLook/: Contents.plist  Preview.html  consolidated.css
BBAROLO.rw6/QuickLook/resources/: param.par
BBAROLO_OUT.rw/: Contents.plist
BBAROLO_OUT.rw/Pages/: Contents.plist
BBAROLO_OUT.rw6/: Contents.plist
BBAROLO_OUT.rw6/Pages/1-Home/: Data.archive
BBAROLO_OUT.rw6/QuickLook/: Preview.html
Split Navigation for RapidWeaver 6.rw6/: Contents.plist
Split Navigation for RapidWeaver 6.rw6/DefaultPageAttributes/: Contents.plist
Split Navigation for RapidWeaver 6.rw6/Pages/: Contents.plist
Split Navigation for RapidWeaver 6.rw6/Pages/1-Home/: Contents.plist  Data.archive
Split Navigation for RapidWeaver 6.rw6/Pages/2-About/: Contents.plist  Data.archive
Split Navigation for RapidWeaver 6.rw6/Pages/3-Contact/: Contents.plist
Split Navigation for RapidWeaver 6.rw6/QuickLook/: Preview.html
bugs/: index.html  index.php
config/.svn/: all-wcprops  entries
contact-form/: index.php
contact-form/files/: mailer.php
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: conf.py  fitsutils.rst  index.rst  installing.rst  license.rst  pyBB_test.py  pybb_api.rst  pybb_install.rst  pybb_quickstart.rst  running.rst  tasks.rst  troubleshooting.rst
docs/source/tasks/: ellprof.rst  fit2d.rst  fit3d.rst  galmod.rst  general.rst  index.rst  moment.rst  search.rst  smooth.rst  spacepar.rst
documentation/: index.html
downloads/: index.html
downloads/binaries/: index.html
downloads/downloads-2/: index.html
downloads/examples/: index.html
downloads/source/: index.html
pyBBarolo/: BB_interface.cpp  BB_interface.py  BBarolo  __init__.py  _version.py  bayesian.py  bayesian_test.py  index.html  pyBBarolo.py  setup.py  utils.py  wrapper.py
resources/: param.par
rw_common/: version.txt
rw_common/assets/: rw-badge.js
rw_common/themes/Patchy/: consolidated-2.css
rw_common/themes/reason/: consolidated.css  ie.js
rw_common/themes/split/: consolidated-0.css  consolidated-11.css  consolidated-12.css  consolidated-3.css  consolidated-5.css  consolidated-7.css  consolidated.css
src/: .cproject  .project  BB_interface.cpp  bbarolo.cpp  bbarolo.hh  bbarolo.pro  bbarolo.pro.user.0287121  bbarolo.pro.user.18  bbarolo.pro.user.3.2-pre1  bbarolo_mpi.cpp
src/Arrays/: array.hpp  cube.cpp  cube.hh  header.cpp  header.hh  image.cpp  image.hh  param.cpp  param.hh  rings.hh  search.cpp  stats.cpp  stats.hh
src/GUI/: .qmake.stash  .swp  Bbarolo.tiff  BbaroloGUI.pro  BbaroloGUI.pro.user.18  BbaroloGUI.pro.user.3.2-pre1  Makefile  bbarologui_plugin_import.cpp  bbarolonew.tiff  bbarolowindow.cpp  bbarolowindow.h  bbarolowindow.py  bbarolowindow.ui  bbarolowindow_run.cpp  consolestream.h  main.cpp  main.py  q_streamdebug.h  qrc_resources.cpp  resources.qrc  test.py  test_ui.py  ui_bbarolowindow.h  ui_bbarolowindow.py
src/GUI/GUI_py/: BBaroloGUI.py  BBaroloGUI.pyproject  BBaroloGUI.spec  bbarolowindow.py  bbarolowindow_io.py  imports.py  resources.qrc  resources_rc.py
src/GUI/resources/: Bbarolo.icns
src/Map/: detection.cpp  detection.hh  object2D.cpp  object2D.hh  object3D.cpp  object3D.hh  objectgrower.cpp  objectgrower.hh  scan.cpp  scan.hh  voxel.cpp  voxel.hh
src/Tasks/: ellprof.cpp  ellprof.hh  galfit.cpp  galfit.hh  galfit_errors.cpp  galfit_min.cpp  galfit_out.cpp  galmod.cpp  galmod.hh  galmod_stdc++.cpp  galwind.cpp  galwind.hh  moment.cpp  moment.hh  rendering3D.hh  ringmodel.cpp  ringmodel.hh  search.cpp  search.hh  slitfit.cpp  smooth3D.cpp  smooth3D.hh  spacepar.cpp  spacepar.hh  spacepar.hpp
src/Utilities/: allocator.cpp  allocator.hpp  conv2D.cpp  conv2D.hh  converter.cpp  converter.hh  ellprof.cpp  ellprof.hh  fitsUtils.cpp  galfit.cpp  galfit.hh  galfit2.cpp  galfit_errors.cpp  galfit_min.cpp  galfit_out.cpp  galmod.cpp  galmod.hh  gnuplot.hh  interpolation.cpp  lsqfit.cpp  lsqfit.hh  moment.hh  optimization.hh  paramguess.cpp  paramguess.hh  progressbar.cpp  progressbar.hh  ringmodel.cpp  ringmodel.hh  slitfit.cpp  smooth3D.cpp  smooth3D.hh  spacepar.hh  statistics.cpp  string.cpp  utils.cpp  utils.hh  wcsUtils.cpp
styled/: index.html
styled-3/: index.html
styled-3/blog/: index.html
styled-3/blog/files/: 2c59dfc4387dd326cc38c868da1e209e-1.html  7b06f896794b90648cfdc435afe816d2-2.html  archive-sep-2014.html  d209e09813d9da21deaca114a509e45f-0.html  feed.xml
styled-3/markdown/: index.html
styled-3/sitemap/: index.html
styled/downloads/: index.html
styled/styled-2/: index.html
styled/styled-4/: index.html
(+75 files in other folders)
